add ffmpeg commands

--- a/src/app/file-upload/file-upload.component.html
+++ b/src/app/file-upload/file-upload.component.html
@@ -3,6 +3,7 @@
     ngxFileDropzone
     #filePicker="ngxFilePicker"
     [accept]="acceptType"
+    [readMode]="readModeType"
     (filePick)="onFilePicked($event)"
     (fileDrop)="onFilePicked($event)">
   <span>{{ title }}</span>
